# llm-eval-harness

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml  scheduled-benchmark.yml
api/: Dockerfile  db.py  main.py  schemas.py  store.py
api/routes/: metrics.py  models.py  runs.py
data/: metrics.db
datasets/code_gen/: code_gen.yaml
datasets/legal_qa/: legal_qa.yaml
datasets/summarization/: summarization.yaml
frontend/: Dockerfile  index.html
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  constants.ts  types.ts
frontend/src/components/: Nav.tsx  TrendChart.tsx
frontend/src/context/: RunsContext.tsx
frontend/src/pages/: ComparisonPage.tsx  ResultsPage.tsx  RunConfigPage.tsx  SystemHealthPage.tsx
llm_eval/adapters/: __init__.py  base.py  ollama_adapter.py
llm_eval/dashboard/: app.py
llm_eval/evaluators/: __init__.py  hallucination_evaluator.py  rouge_evaluator.py
llm_eval/runner/: dataset_loader.py  prompt_runner.py
scripts/: generate_tests.py  run_eval.py  scheduled_benchmark.py
tests/: test_api.py
