[project]
name = "llm-eval-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.2",
    "evaluate>=0.4.6",
    "httpx>=0.28.1",
    "mlflow>=3.11.1",
    "nltk>=3.9.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "rouge-score>=0.1.2",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
    "transformers>=5.5.3",
]
